force-app/main/default/objects/sma__MASavedQry__c/sma__MASavedQry__c.object-meta.xml
<CustomObject>
    <label>MapAnything Saved Query</label>
    <nameField>
        <label>Query Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>MapAnything Saved Queries</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>