force-app/main/default/objects/sma__MASavedQry__c/fields/sma__ActivityFilter__c.field-meta.xml
<CustomField>
    <fullName>sma__ActivityFilter__c</fullName>
    <label>Activity Filter</label>
    <length>255</length>
    <type>Text</type>
</CustomField>