force-app/main/default/objects/sma__MASavedQry__c/fields/sma__AdvancedOptions__c.field-meta.xml
<CustomField>
    <fullName>sma__AdvancedOptions__c</fullName>
    <label>Advanced Options</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>