force-app/main/default/objects/sma__MASavedQry__c/fields/sma__CacheInterval__c.field-meta.xml
<CustomField>
    <fullName>sma__CacheInterval__c</fullName>
    <label>Cache Interval</label>
    <length>255</length>
    <type>Text</type>
</CustomField>