force-app/main/default/objects/sma__MASavedQry__c/fields/sma__ColorAssignment__c.field-meta.xml
<CustomField>
    <fullName>sma__ColorAssignment__c</fullName>
    <label>Color Assignment</label>
    <length>130000</length>
    <type>LongTextArea</type>
</CustomField>