force-app/main/default/objects/sma__MASavedQry__c/fields/sma__ColorAssignmentType__c.field-meta.xml
<CustomField>
    <fullName>sma__ColorAssignmentType__c</fullName>
    <label>Color Assignment Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Static</fullName>
            </value>
            <value>
                <fullName>Dynamic, Field</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>