force-app/main/default/objects/sma__MASavedQry__c/fields/sma__ColorsAssignedDynamically__c.field-meta.xml
<CustomField>
    <fullName>sma__ColorsAssignedDynamically__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Colors Assigned Dynamically</label>
    <type>Checkbox</type>
</CustomField>