force-app/main/default/objects/sma__MASavedQry__c/fields/sma__CustomQuery__c.field-meta.xml
<CustomField>
    <fullName>sma__CustomQuery__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Custom Query</label>
    <type>Checkbox</type>
</CustomField>