force-app/main/default/objects/sma__MASavedQry__c/fields/sma__IconColor__c.field-meta.xml
<CustomField>
    <fullName>sma__IconColor__c</fullName>
    <label>Icon Color</label>
    <length>255</length>
    <type>Text</type>
</CustomField>