force-app/main/default/objects/sma__MASavedQry__c/fields/sma__LastCacheDate__c.field-meta.xml
<CustomField>
    <fullName>sma__LastCacheDate__c</fullName>
    <label>Last Cache Date</label>
    <type>DateTime</type>
</CustomField>