force-app/main/default/objects/sma__MASavedQry__c/fields/sma__MaxQuerySize__c.field-meta.xml
<CustomField>
    <fullName>sma__MaxQuerySize__c</fullName>
    <label>Max Query Size</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>