force-app/main/default/objects/sma__MASavedQry__c/fields/sma__NumCaches__c.field-meta.xml
<CustomField>
    <fullName>sma__NumCaches__c</fullName>
    <label># Caches</label>
    <summaryFilterItems>
        <field>sma__MACache__c.sma__Active__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>sma__MACache__c.sma__SavedQuery__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>