force-app/main/default/objects/sma__MASavedQry__c/fields/sma__OrgWide__c.field-meta.xml
<CustomField>
    <fullName>sma__OrgWide__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Organization Wide</label>
    <type>Checkbox</type>
</CustomField>