force-app/main/default/objects/sma__MASavedQry__c/fields/sma__OwnerFilterId__c.field-meta.xml
<CustomField>
    <fullName>sma__OwnerFilterId__c</fullName>
    <label>OwnerFilterId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>