force-app/main/default/objects/sma__MASavedQry__c/fields/sma__ProximityOptions__c.field-meta.xml
<CustomField>
    <fullName>sma__ProximityOptions__c</fullName>
    <label>Proximity Options</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>