force-app/main/default/objects/sma__MASavedQry__c/fields/sma__Query__c.field-meta.xml
<CustomField>
    <fullName>sma__Query__c</fullName>
    <label>Query</label>
    <length>130000</length>
    <type>LongTextArea</type>
</CustomField>