force-app/main/default/objects/sma__MASavedQry__c/fields/sma__QueryKey__c.field-meta.xml
<CustomField>
    <fullName>sma__QueryKey__c</fullName>
    <label>Query Key</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>