force-app/main/default/objects/sma__MASavedQry__c/fields/sma__RelatedListCount__c.field-meta.xml
<CustomField>
    <fullName>sma__RelatedListCount__c</fullName>
    <label>Related List Count</label>
    <summaryForeignKey>sma__MARelatedList__c.sma__SavedQuery__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>