force-app/main/default/objects/sma__MASavedQry__c/fields/sma__RoleId__c.field-meta.xml
<CustomField>
    <fullName>sma__RoleId__c</fullName>
    <label>RoleId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>