force-app/main/default/objects/sma__MASavedQry__c/fields/sma__RowLimit__c.field-meta.xml
<CustomField>
    <fullName>sma__RowLimit__c</fullName>
    <defaultValue>250000</defaultValue>
    <label>Row Limit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>