force-app/main/default/objects/sma__MASavedQry__c/fields/sma__RowOrder__c.field-meta.xml
<CustomField>
    <fullName>sma__RowOrder__c</fullName>
    <label>Row Order</label>
    <length>255</length>
    <type>Text</type>
</CustomField>