force-app/main/default/objects/sma__MASavedQry__c/fields/sma__ShapeAssignment__c.field-meta.xml
<CustomField>
    <fullName>sma__ShapeAssignment__c</fullName>
    <label>ShapeAssignment</label>
    <length>130000</length>
    <type>LongTextArea</type>
</CustomField>