force-app/main/default/objects/sma__MASavedQry__c/fields/sma__ShapeField__c.field-meta.xml
<CustomField>
    <fullName>sma__ShapeField__c</fullName>
    <label>Shape Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>