force-app/main/default/objects/sma__MASavedQry__c/fields/sma__Tooltip1__c.field-meta.xml
<CustomField>
    <fullName>sma__Tooltip1__c</fullName>
    <label>Tooltip One</label>
    <length>255</length>
    <type>Text</type>
</CustomField>