force-app/main/default/objects/sma__MASavedQry__c/fields/sma__Tooltip4__c.field-meta.xml
<CustomField>
    <fullName>sma__Tooltip4__c</fullName>
    <label>Tooltip Four</label>
    <length>255</length>
    <type>Text</type>
</CustomField>