force-app/main/default/objects/sma__MASavedQry__c/listViews/sma__All.listView-meta.xml
<ListView>
    <fullName>sma__All</fullName>
    <columns>NAME</columns>
    <columns>sma__PicklistField__c</columns>
    <columns>sma__OrgWide__c</columns>
    <columns>sma__BaseObject__c</columns>
    <columns>sma__Tooltip8__c</columns>
    <columns>sma__Tooltip5__c</columns>
    <columns>sma__Tooltip4__c</columns>
    <columns>sma__Tooltip1__c</columns>
    <columns>sma__Tooltip7__c</columns>
    <columns>sma__Tooltip6__c</columns>
    <columns>sma__Tooltip3__c</columns>
    <columns>sma__Tooltip2__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>